Fixed formatting on progress bar to prevent overflow.

--- a/css/main.css
+++ b/css/main.css
@@ -194,8 +194,12 @@ td.progress-bar {
 	height: 100%;
 	background-color: #cfb53b;
 	border-radius: 5px;
-	padding: 0 5px;
-} 
+	padding: 0;
+}
+
+.percentage {
+	padding-left: 5px;
+}
  
 .election-place {
 	background-color: #bbeebb;
